--- a/src/_includes/layouts/docs.njk
+++ b/src/_includes/layouts/docs.njk
@@ -27,7 +27,7 @@ layout: layouts/base.njk
   
   <div class="w-64 max-lg:hidden">
     <div class="sticky top-16 text-sm">
-      <h2 class="font-semibold track-tight">On this page</h2>
+      <h2 class="font-semibold track-tight">Content:</h2>
       {{ content | toc | safe }}
     </div>
   </div>
