--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,7 @@
   <title>{{ site.title + ": " + title if page.url === "/" else title + " - " + site.title }}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="description" content="{{ description or site.description }}"/>
+  <meta name="keywords" content="{{ keywords or site.keywords }}"/>
   <link rel="stylesheet" type="text/css" href="/styles.css?build={% now %}"/>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -31,10 +32,14 @@
   <script src="/js/alpine.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-background antialiased font-inter">
+<body class="bg-background antialiased font-inter flex flex-col min-h-screen">
   {% include "partials/header.njk" %}
-  {{ content | safe }}
+
+  <main class="flex-1">
+    {{ content | safe }}
+  </main>
+
   {% include "partials/footer.njk" %}
-  {% include "partials/analytics.njk" %}
 </body>
+
 </html>
