--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -3,7 +3,7 @@
     <svg class="max-sm:h-4 max-sm:w-4 h-5 w-5" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
       <path d="M0 4.8C0 2.14903 2.14903 0 4.8 0H12.0118C13.2848 0 14.5057 0.505713 15.4059 1.40589L22.5941 8.59411C23.4943 9.49429 24 10.7152 24 11.9882V19.2C24 21.851 21.851 24 19.2 24H4.8C2.14903 24 0 21.851 0 19.2V4.8Z"/>
     </svg>
-    <span class="hidden sm:inline-block ml-2 text-sm font-semibold">Pages CMS</span>
+    <span class="hidden sm:inline-block ml-2 text-sm font-semibold">CommandBridge</span>
   </a>
   <a class="ml-auto text-sm font-medium text-muted-foreground hover:text-primary {{ '!text-primary font-medium' if page.url == '/' }}" href="/">
     About
@@ -11,15 +11,15 @@
   <a class="text-sm font-medium text-muted-foreground hover:text-primary {{ '!text-primary' if '/docs' in page.url }}" href="/docs">
     Docs
   </a>
-  <a class="flex gap-x-1 items-center text-sm font-medium text-muted-foreground hover:text-primary" href="https://github.com/pages-cms/pages-cms" target="_blank">
+  <a class="flex gap-x-1 items-center text-sm font-medium text-muted-foreground hover:text-primary" href="https://github.com/objz/CommandBridge" target="_blank">
     GitHub
     {% lucide "arrow-up-right", { "class" : "h-3 w-3" } %}
   </a>
-  <a class="flex gap-x-1 items-center text-sm font-medium text-muted-foreground hover:text-primary" href="https://pagescms.org/chat" target="_blank">
+  <a class="flex gap-x-1 items-center text-sm font-medium text-muted-foreground hover:text-primary" href="https://discord.gg/QPqBYb44ce" target="_blank">
     Discord
     {% lucide "arrow-up-right", { "class" : "h-3 w-3" } %}
   </a>
-  <a class="button-outline !h-8" href="https://app.pagescms.org">
-    Sign in
+  <a class="button-outline !h-8" href="https://modrinth.com/plugin/commandbridge">
+    Download {% lucide "download", { "class" : "h-3 w-3" } %}
   </a>
 </header>
