added info parser and changes for the home and docs page

--- a/src/index.njk
+++ b/src/index.njk
@@ -21,7 +21,7 @@ description: A modern Minecraft plugin that enables robust server-side automatio
   .arrow-svg {
     width: 8rem;
     height: 1.5rem;
-    stroke: #fff;
+    stroke: currentColor;
     stroke-width: 2;
     fill: none;
     opacity: .6;
