--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -11,6 +11,11 @@
   <a class="text-sm font-medium text-muted-foreground hover:text-primary {{ '!text-primary' if '/docs' in page.url }}" href="/docs">
     Docs
   </a>
+
+
+
+<div class="h-4 w-px bg-border mx-2"></div>
+
   <a class="flex gap-x-1 items-center text-sm font-medium text-muted-foreground hover:text-primary" href="https://github.com/objz/CommandBridge" target="_blank">
     GitHub
     {% lucide "arrow-up-right", { "class" : "h-3 w-3" } %}
@@ -19,7 +24,10 @@
     Discord
     {% lucide "arrow-up-right", { "class" : "h-3 w-3" } %}
   </a>
-  <a class="button-outline !h-8" href="https://modrinth.com/plugin/commandbridge">
-    Download {% lucide "download", { "class" : "h-3 w-3" } %}
-  </a>
+
+<a class="button-outline !h-8 inline-flex items-center" href="https://modrinth.com/plugin/commandbridge#download">
+  <span>Download</span>
+  <span class="ml-1">{% lucide "download", { "class" : "h-3 w-3" } %}</span>
+</a>
+
 </header>
