--- a/src/index.njk
+++ b/src/index.njk
@@ -59,7 +59,7 @@ description: A modern Minecraft plugin that enables robust server-side automatio
              href="https://modrinth.com/plugin/commandbridge"
              target="_blank">Modrinth</a>
           <a class="button-outline !text-base !h-12 !px-8"
-             href="https://github.com/jpenilla/commandbridge"
+             href="https://github.com/objz/commandbridge"
              target="_blank">GitHub</a>
         </div>
       </div>
