--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,6 +1,6 @@
 <header class="border-b flex items-center gap-x-4 py-2 px-4 lg:py-3 lg:px-6 mx-auto sticky top-0 w-full bg-background z-50">
   <a class="inline-flex items-center" href="/">
-    <img src="/media/commandbridge-min.png" alt="CommandBridge Logo" class="max-sm:h-4 max-sm:w-4 h-5 w-5" />
+    <img src="/media/svg/commandbridge.svg" alt="CommandBridge Logo" class="max-sm:h-4 max-sm:w-4 h-5 w-5" />
     <span class="hidden sm:inline-block ml-2 text-sm font-semibold">CommandBridge</span>
   </a>
   <a class="ml-auto text-sm font-medium text-muted-foreground hover:text-primary {{ '!text-primary font-medium' if page.url == '/' }}" href="/">
