added google verification

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="description" content="{{ description or site.description }}"/>
   <meta name="keywords" content="{{ keywords or site.keywords }}"/>
+  <meta name="google-site-verification" content="ezFUCuU_frd_VYz_hthvgjtilm5g2ycl6lc2WWnNVHA" />
   <link rel="stylesheet" type="text/css" href="/styles.css?build={% now %}"/>
   <link rel="icon" type="image/x-icon" href="{{ site.url }}/favicon.ico">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}/favicon-32x32.png">
